# monopoly-llm-benchmark

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md
batches/: batch.example.json
contracts/: README.txt  validate-contracts.mjs
contracts/data/: board.json
contracts/examples/: action.bid_auction.example.json  action.drop_out.example.json  action.example.json  decision.auction.example.json  decision.example.json  decision.jail.example.json  decision.liquidation.example.json  decision.post_turn.example.json  event.example.jsonl  state.example.json
contracts/schemas/: action.schema.json  board.schema.json  decision.schema.json  event.schema.json  (+1 more)
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
python/: README.md  mypy.ini  pyproject.toml
python/apps/api/: README.md  main.py  pyproject.toml
python/apps/api/src/monopoly_api/: action_validation.py  decision_index.py  llm_runner.py  main.py  mock_runner.py  paths.py  player_config.py  prompting.py  run_manager.py  schema_registry.py  settings.py  ws_protocol.py
python/apps/api/src/monopoly_api/config/: one-line.py  personalities.md  players.json
python/apps/api/tests/: test_action_validation.py  test_api_shims.py  test_batch_runner.py  test_decision_endpoints.py  test_import.py  test_llm_runner.py  test_mock_determinism.py  test_player_config.py  test_prompt_artifacts.py  test_protocol_shapes.py  test_replay_runner.py  test_run_manager_idempotency.py  test_runner_pause_resume.py  test_schema_registry_refs.py
scripts/: verify.ps1  verify.sh
(+41 files in other folders)
